Promote dynamiccapital.ton as the canonical production domain

--- a/_static/index.html
+++ b/_static/index.html
@@ -262,7 +262,7 @@
       name="keywords"
       content="dynamic capital,algorithmic trading,mentorship,automation,portfolio intelligence,financial education"
     />
-    <link rel="canonical" href="https://dynamic-capital.ondigitalocean.app" />
+    <link rel="canonical" href="https://dynamiccapital.ton" />
     <meta property="og:title" content="Dynamic Capital" />
     <meta
       property="og:description"
@@ -270,13 +270,13 @@
     />
     <meta
       property="og:url"
-      content="https://dynamic-capital.ondigitalocean.app"
+      content="https://dynamiccapital.ton"
     />
     <meta property="og:site_name" content="Dynamic Capital" />
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:image"
-      content="https://dynamic-capital.ondigitalocean.app/social/social-preview.svg"
+      content="https://dynamiccapital.ton/social/social-preview.svg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -290,7 +290,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://dynamic-capital.ondigitalocean.app/social/social-preview.svg"
+      content="https://dynamiccapital.ton/social/social-preview.svg"
     />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="icon" href="/favicon.ico" />
@@ -1421,7 +1421,7 @@
             </div>
             <div class="display-flex position-relative g-12">
               <a
-                href="https://dynamic-capital.ondigitalocean.app/"
+                href="https://dynamiccapital.ton/"
                 target="_blank"
                 rel="noreferrer"
                 class="Button_button__a_BVP Button_ghost__MCiw7 IconButton_s__U7rlx radius-m text-decoration-none button cursor-interactive"
@@ -2253,7 +2253,7 @@
     <script>
       self.__next_f.push([
         1,
-        '26:["$","$L1f",null,{"gap":"16","wrap":true,"horizontal":"between","vertical":"center","className":"border-t border-border/40 pt-6","children":[["$","$L14",null,{"gap":"4","children":[["$","span",null,{"ref":"$undefined","className":"font-body font-default font-s neutral-on-background-weak","style":{"textAlign":"$undefined","textWrap":"$undefined"},"children":["$","$L28",null,{"speed":"medium","trigger":"inView","charset":"X$@aHz0y#?*01+","letterClassName":"tracking-tight","children":["© ",2025," ","Dynamic Capital",". All rights reserved."]}]}],["$","span",null,{"ref":"$undefined","className":"font-body font-default font-xs neutral-on-background-weak","style":{"textAlign":"$undefined","textWrap":"$undefined"},"children":"SOC 2 aligned logging · Least privilege credential management · Human-in-the-loop escalation paths"}]]}],["$","$L1f",null,{"gap":"12","children":[["$","$L29","Website",{"href":"https://dynamic-capital.ondigitalocean.app/","icon":"globe","size":"s","variant":"ghost","tooltip":"Website"}],["$","$L29","Telegram",{"href":"https://t.me/DynamicCapital_Support","icon":"telegram","size":"s","variant":"ghost","tooltip":"Telegram"}],["$","$L29","Instagram",{"href":"https://www.instagram.com/dynamic.capital","icon":"instagram","size":"s","variant":"ghost","tooltip":"Instagram"}],["$","$L29","Facebook",{"href":"https://www.facebook.com/dynamic.capital.fb","icon":"facebook","size":"s","variant":"ghost","tooltip":"Facebook"}],["$","$L29","TradingView",{"href":"https://www.tradingview.com/u/DynamicCapital-FX/","icon":"tradingview","size":"s","variant":"ghost","tooltip":"TradingView"}],["$","$L29","Email",{"href":"mailto:hello@dynamiccapital.ton","icon":"email","size":"s","variant":"ghost","tooltip":"Email"}],["$","$L29","Phone",{"href":"tel:+9609990615","icon":"phone","size":"s","variant":"ghost","tooltip":"Phone"}],["$","$L29","Location",{"href":"https://maps.google.com/?q=Mal%C3%A9,+Maldives","icon":"location","size":"s","variant":"ghost","tooltip":"Location"}]]}]]}]\n',
+        '26:["$","$L1f",null,{"gap":"16","wrap":true,"horizontal":"between","vertical":"center","className":"border-t border-border/40 pt-6","children":[["$","$L14",null,{"gap":"4","children":[["$","span",null,{"ref":"$undefined","className":"font-body font-default font-s neutral-on-background-weak","style":{"textAlign":"$undefined","textWrap":"$undefined"},"children":["$","$L28",null,{"speed":"medium","trigger":"inView","charset":"X$@aHz0y#?*01+","letterClassName":"tracking-tight","children":["© ",2025," ","Dynamic Capital",". All rights reserved."]}]}],["$","span",null,{"ref":"$undefined","className":"font-body font-default font-xs neutral-on-background-weak","style":{"textAlign":"$undefined","textWrap":"$undefined"},"children":"SOC 2 aligned logging · Least privilege credential management · Human-in-the-loop escalation paths"}]]}],["$","$L1f",null,{"gap":"12","children":[["$","$L29","Website",{"href":"https://dynamiccapital.ton/","icon":"globe","size":"s","variant":"ghost","tooltip":"Website"}],["$","$L29","Telegram",{"href":"https://t.me/DynamicCapital_Support","icon":"telegram","size":"s","variant":"ghost","tooltip":"Telegram"}],["$","$L29","Instagram",{"href":"https://www.instagram.com/dynamic.capital","icon":"instagram","size":"s","variant":"ghost","tooltip":"Instagram"}],["$","$L29","Facebook",{"href":"https://www.facebook.com/dynamic.capital.fb","icon":"facebook","size":"s","variant":"ghost","tooltip":"Facebook"}],["$","$L29","TradingView",{"href":"https://www.tradingview.com/u/DynamicCapital-FX/","icon":"tradingview","size":"s","variant":"ghost","tooltip":"TradingView"}],["$","$L29","Email",{"href":"mailto:hello@dynamiccapital.ton","icon":"email","size":"s","variant":"ghost","tooltip":"Email"}],["$","$L29","Phone",{"href":"tel:+9609990615","icon":"phone","size":"s","variant":"ghost","tooltip":"Phone"}],["$","$L29","Location",{"href":"https://maps.google.com/?q=Mal%C3%A9,+Maldives","icon":"location","size":"s","variant":"ghost","tooltip":"Location"}]]}]]}]\n',
       ]);
     </script>
     <script>
@@ -2271,7 +2271,7 @@
     <script>
       self.__next_f.push([
         1,
-        '7:{"metadata":[["$","title","0",{"children":"Dynamic Capital"}],["$","meta","1",{"name":"description","content":"Dynamic Capital delivers institutional trading intelligence, mentorship, and automation for ambitious operators."}],["$","meta","2",{"name":"application-name","content":"Dynamic Capital"}],["$","meta","3",{"name":"keywords","content":"dynamic capital,algorithmic trading,mentorship,automation,portfolio intelligence,financial education"}],["$","link","4",{"rel":"canonical","href":"https://dynamic-capital.ondigitalocean.app"}],["$","meta","5",{"property":"og:title","content":"Dynamic Capital"}],["$","meta","6",{"property":"og:description","content":"Dynamic Capital delivers institutional trading intelligence, mentorship, and automation for ambitious operators."}],["$","meta","7",{"property":"og:url","content":"https://dynamic-capital.ondigitalocean.app"}],["$","meta","8",{"property":"og:site_name","content":"Dynamic Capital"}],["$","meta","9",{"property":"og:locale","content":"en_US"}],["$","meta","10",{"property":"og:image","content":"https://dynamic-capital.ondigitalocean.app/social/social-preview.svg"}],["$","meta","11",{"property":"og:image:width","content":"1200"}],["$","meta","12",{"property":"og:image:height","content":"630"}],["$","meta","13",{"property":"og:image:alt","content":"Dynamic Capital social preview"}],["$","meta","14",{"property":"og:type","content":"website"}],["$","meta","15",{"name":"twitter:card","content":"summary_large_image"}],["$","meta","16",{"name":"twitter:title","content":"Dynamic Capital"}],["$","meta","17",{"name":"twitter:description","content":"Dynamic Capital delivers institutional trading intelligence, mentorship, and automation for ambitious operators."}],["$","meta","18",{"name":"twitter:image","content":"https://dynamic-capital.ondigitalocean.app/social/social-preview.svg"}],["$","link","19",{"rel":"shortcut icon","href":"/favicon.ico"}],["$","link","20",{"rel":"icon","href":"/favicon.ico"}],["$","link","21",{"rel":"apple-touch-icon","href":"/logo.svg"}],["$","$L2b","22",{}]],"error":null,"digest":"$undefined"}\n',
+        '7:{"metadata":[["$","title","0",{"children":"Dynamic Capital"}],["$","meta","1",{"name":"description","content":"Dynamic Capital delivers institutional trading intelligence, mentorship, and automation for ambitious operators."}],["$","meta","2",{"name":"application-name","content":"Dynamic Capital"}],["$","meta","3",{"name":"keywords","content":"dynamic capital,algorithmic trading,mentorship,automation,portfolio intelligence,financial education"}],["$","link","4",{"rel":"canonical","href":"https://dynamiccapital.ton"}],["$","meta","5",{"property":"og:title","content":"Dynamic Capital"}],["$","meta","6",{"property":"og:description","content":"Dynamic Capital delivers institutional trading intelligence, mentorship, and automation for ambitious operators."}],["$","meta","7",{"property":"og:url","content":"https://dynamiccapital.ton"}],["$","meta","8",{"property":"og:site_name","content":"Dynamic Capital"}],["$","meta","9",{"property":"og:locale","content":"en_US"}],["$","meta","10",{"property":"og:image","content":"https://dynamiccapital.ton/social/social-preview.svg"}],["$","meta","11",{"property":"og:image:width","content":"1200"}],["$","meta","12",{"property":"og:image:height","content":"630"}],["$","meta","13",{"property":"og:image:alt","content":"Dynamic Capital social preview"}],["$","meta","14",{"property":"og:type","content":"website"}],["$","meta","15",{"name":"twitter:card","content":"summary_large_image"}],["$","meta","16",{"name":"twitter:title","content":"Dynamic Capital"}],["$","meta","17",{"name":"twitter:description","content":"Dynamic Capital delivers institutional trading intelligence, mentorship, and automation for ambitious operators."}],["$","meta","18",{"name":"twitter:image","content":"https://dynamiccapital.ton/social/social-preview.svg"}],["$","link","19",{"rel":"shortcut icon","href":"/favicon.ico"}],["$","link","20",{"rel":"icon","href":"/favicon.ico"}],["$","link","21",{"rel":"apple-touch-icon","href":"/logo.svg"}],["$","$L2b","22",{}]],"error":null,"digest":"$undefined"}\n',
       ]);
     </script>
     <script>
