Point brand assets to hosted Supabase SVGs

--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" sizes="any" href="/logo.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      sizes="any"
+      href="https://qeejuomcapbdlhnjqjcc.supabase.co/storage/v1/object/public/miniapp/logo.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ee3a3a" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon" href="/logo.svg" />
+    <link
+      rel="apple-touch-icon"
+      href="https://qeejuomcapbdlhnjqjcc.supabase.co/storage/v1/object/public/miniapp/logo.svg"
+    />
 
     <!-- Google Fonts: Inter (main UI), JetBrains Mono (code) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
