--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     >
 
     <title>Dynamic Capital</title>
-    <meta name="description" content="Start with Dynamic Chat and operate from a single, dependable investor desk on TON that blends mentorship, market coverage, and treasury automation.">
+    <meta name="description" content="Run your investor desk inside Dynamic Chat—pair mentorship, market coverage, and TON treasury execution in one dependable workspace.">
     <meta property="og:title" content="Dynamic Capital">
   <meta name="twitter:title" content="Dynamic Capital">
-  <meta property="og:description" content="Start with Dynamic Chat and operate from a single, dependable investor desk on TON that blends mentorship, market coverage, and treasury automation.">
-  <meta name="twitter:description" content="Start with Dynamic Chat and operate from a single, dependable investor desk on TON that blends mentorship, market coverage, and treasury automation.">
+  <meta property="og:description" content="Run your investor desk inside Dynamic Chat—pair mentorship, market coverage, and TON treasury execution in one dependable workspace.">
+  <meta name="twitter:description" content="Run your investor desk inside Dynamic Chat—pair mentorship, market coverage, and TON treasury execution in one dependable workspace.">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
 </head>
