Refine Dynamic Chat messaging and navigation copy

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     >
 
     <title>Dynamic Capital</title>
-    <meta name="description" content="Run your investor desk inside Dynamic Chat—pair mentorship, market coverage, and TON treasury execution in one dependable workspace.">
+    <meta name="description" content="Dynamic Capital unifies investor onboarding, treasury execution, and market context inside Dynamic Chat so desks can move from diligence to deployment without juggling dashboards.">
     <meta property="og:title" content="Dynamic Capital">
   <meta name="twitter:title" content="Dynamic Capital">
-  <meta property="og:description" content="Run your investor desk inside Dynamic Chat—pair mentorship, market coverage, and TON treasury execution in one dependable workspace.">
-  <meta name="twitter:description" content="Run your investor desk inside Dynamic Chat—pair mentorship, market coverage, and TON treasury execution in one dependable workspace.">
+  <meta property="og:description" content="Dynamic Capital unifies investor onboarding, treasury execution, and market context inside Dynamic Chat so desks can move from diligence to deployment without juggling dashboards.">
+  <meta name="twitter:description" content="Dynamic Capital unifies investor onboarding, treasury execution, and market context inside Dynamic Chat so desks can move from diligence to deployment without juggling dashboards.">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
 </head>
