--- a/dynamic-capital-ton/storage/predeploy/ton-site-public/apps/web/public/offline.html
+++ b/dynamic-capital-ton/storage/predeploy/ton-site-public/apps/web/public/offline.html
@@ -67,7 +67,7 @@
   <body>
     <article class="card">
       <div class="pill" role="status">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
+        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
           <path
             d="M12 2a10 10 0 0 0-3.16 19.47c.5.09.68-.22.68-.5 0-.25-.01-.92-.01-1.79-2.78.6-3.37-1.34-3.37-1.34-.45-1.15-1.1-1.45-1.1-1.45-.9-.62.07-.61.07-.61 1 .07 1.52 1.03 1.52 1.03.89 1.52 2.34 1.08 2.91.83.09-.65.35-1.08.63-1.33-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.99 1.03-2.69-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.03a9.56 9.56 0 0 1 5 0c1.9-1.3 2.74-1.03 2.74-1.03.55 1.38.2 2.4.1 2.65.64.7 1.03 1.6 1.03 2.69 0 3.86-2.34 4.7-4.58 4.95.36.31.68.92.68 1.86 0 1.34-.01 2.43-.01 2.76 0 .28.18.6.69.5A10 10 0 0 0 12 2Z"
           />
